<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue">

    <ImageView
        android:id="@+id/imgCarPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mazda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCarName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mazda_3"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/imgCarPhoto"
        app:layout_constraintTop_toTopOf="@+id/imgCarPhoto" />

    <TextView
        android:id="@+id/txtModel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/sms1000z_5_seater"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/txtDistance"
        app:layout_constraintStart_toStartOf="@+id/txtCarName"
        app:layout_constraintTop_toBottomOf="@+id/txtCarName" />

    <TextView
        android:id="@+id/txtDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_5_km_away"
        android:textColor="@color/teal_200"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCarName" />

    <TextView
        android:id="@+id/txtRentalFeeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rental_fee"
        android:textColor="#C1BEBE"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/txtCarName"
        app:layout_constraintTop_toBottomOf="@+id/txtModel" />

    <TextView
        android:id="@+id/txtRentalFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/fr_3_00_hr"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/txtCarName"
        app:layout_constraintTop_toBottomOf="@id/txtRentalFeeLabel" />

    <TextView
        android:id="@+id/txtChargesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/mileage_fee"
        android:textColor="#C1BEBE"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/txtRentalFee"
        app:layout_constraintTop_toBottomOf="@+id/txtModel" />

    <TextView
        android:id="@+id/txtCharges"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/_0_40_km"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/txtChargesLabel"
        app:layout_constraintTop_toBottomOf="@id/txtRentalFeeLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>