<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgBackArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/txtSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/search_results"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgBackArrow"
        app:layout_constraintStart_toEndOf="@id/imgBackArrow"
        app:layout_constraintTop_toTopOf="@+id/imgBackArrow" />

    <ImageView
        android:id="@+id/imgLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_location_on_24"
        app:layout_constraintBottom_toBottomOf="@+id/txtLocation"
        app:layout_constraintEnd_toEndOf="@+id/imgBackArrow"
        app:layout_constraintStart_toStartOf="@+id/imgBackArrow"
        app:layout_constraintTop_toTopOf="@+id/txtLocationLabel" />

    <TextView
        android:id="@+id/txtLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/location"
        android:textColor="#C1BEBE"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imgLocation"
        app:layout_constraintTop_toBottomOf="@+id/txtSearch" />

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/current_location"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imgLocation"
        app:layout_constraintTop_toBottomOf="@id/txtLocationLabel" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLocation" />

    <ImageView
        android:id="@+id/imgCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_calendar_today_24"
        app:layout_constraintBottom_toBottomOf="@+id/txtDate"
        app:layout_constraintEnd_toEndOf="@+id/imgBackArrow"
        app:layout_constraintStart_toStartOf="@+id/imgBackArrow"
        app:layout_constraintTop_toTopOf="@+id/txtDateLabel" />

    <TextView
        android:id="@+id/txtDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/location"
        android:textColor="#C1BEBE"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imgLocation"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/current_location"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imgLocation"
        app:layout_constraintTop_toBottomOf="@id/txtDateLabel" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0.1dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="9dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDate" />

    <ImageView
        android:id="@+id/imgDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_baseline_access_time_24"
        app:layout_constraintBottom_toBottomOf="@+id/txtDate"
        app:layout_constraintStart_toStartOf="@+id/divider2"
        app:layout_constraintTop_toTopOf="@+id/txtDateLabel" />

    <TextView
        android:id="@+id/txtDurationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/duration"
        android:textColor="#C1BEBE"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imgDuration"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/txtDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/_1_hr"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imgDuration"
        app:layout_constraintTop_toBottomOf="@id/txtDurationLabel" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider3">

        <TextView
            android:id="@+id/txtCarAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/_300_cars_found"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvCars"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="80dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/list_item_car" />

        <Button
            android:id="@+id/btnFilter"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/filter"
            android:textColor="@color/blue"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txtCarAmount"
            app:layout_constraintEnd_toStartOf="@id/btnMap"
            app:layout_constraintTop_toTopOf="@+id/txtCarAmount" />

        <Button
            android:id="@+id/btnMap"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/map"
            android:textColor="@color/blue"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txtCarAmount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtCarAmount" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>